--- a/app/views/surveys/webform.jade
+++ b/app/views/surveys/webform.jade
@@ -15,10 +15,10 @@ block script
     script(src="/js/enketo-webform#{suffix}-dev-bundle.js")
  
 block content
-  if manifest
-    .alert-box.info(style="text-align: center;") Offline-enabled forms are experimental. Use only for testing. 
-      a(href="https://github.com/kobotoolbox/enketo-express/issues" target="_top") Report new bugs
-      | .
+  //- if manifest
+  //-   .alert-box.info(style="text-align: center;") Offline-enabled forms are experimental. Use only for testing. 
+  //-     a(href="https://github.com/kobotoolbox/enketo-express/issues" target="_top") Report new
+  //-     | .
   .main
     article.paper
       include component/_form-header
