added: Norwegian translation

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -33,6 +33,8 @@ block content
           span= t("langs.th")
         when "vi"
           span= t("langs.vi")
+        when "no"
+          span= t("langs.no")
         when "nl"
           span= t("langs.nl")
         default
