fixed: language selector on very small screens has right border

--- a/app/views/styles/component/_form_header.scss
+++ b/app/views/styles/component/_form_header.scss
@@ -211,7 +211,7 @@ $offline-color: #d15200;
     .form-language-selector {
         padding-right: 0;
     }
-    .print {
+    .form-header__button--print {
         display: none;
         ~ .form-language-selector {
             border-right: none;
