fixed: during loading the form footer is not positioned correctly, loader image not centered

--- a/app/views/styles/component/_common.scss
+++ b/app/views/styles/component/_common.scss
@@ -35,7 +35,8 @@ progress {
 
 .form__loader {
     @include loader-image(250px);
-    margin: 170px auto 0 auto;
+    @include flex(1);
+    margin: 70px auto 10px auto;
     &.fail {
         background: none;
     }
