added: Persian translation

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -37,6 +37,8 @@ block content
           span= t("langs.th")
         when "vi"
           span= t("langs.vi")
+        when "fa"
+          span= t("langs.fa")
         when "no"
           span= t("langs.no")
         when "sk"
