changed: updated English strings

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -43,6 +43,8 @@ block content
           span= t("langs.no")
         when "sk"
           span= t("langs.sk")
+        when "zh"
+          span= t("langs.zh")
         when "cs"
           span= t("langs.cs")
         when "nl"
