changed: tweaks to notifications in previews

--- a/app/views/styles/component/_common.scss
+++ b/app/views/styles/component/_common.scss
@@ -2,7 +2,7 @@
 @import "modal";
 @import "alert";
 @import "feedback-bar";
-@import "ad";
+@import "notification";
 
 html {
     // For some reason a height of 100% causes the body to not extend to the bottom
