--- a/app/views/surveys/webform.jade
+++ b/app/views/surveys/webform.jade
@@ -12,7 +12,7 @@ block script
     script(src='/js/enketo-webform#{suffix}-dev-bundle.js')
  
 block content
-  include component/_ad
+  include component/_notification
   .main
     article.paper
       include component/_form-header
