--- a/app/views/styles/component/_notification.scss
+++ b/app/views/styles/component/_notification.scss
@@ -1,6 +1,6 @@
-.ad {
+.notification {
     border: 2px solid $brand-primary-color;
-    width: 120px;
+    width: calc((100% - #{$max-content-width}) / 2 - 40px);
     min-height: 140px;
     border-radius: 5px;
     padding: 10px;
@@ -12,7 +12,7 @@
 }
 
 @media screen and (max-width: 1023px) {
-    .ad {
+    .notification {
         display: none;
     }
 }
