--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -7,11 +7,11 @@ html(manifest=manifest, lang=language, dir=dir(language))
     meta(name="author", content="Martijn van de Rijdt (Enketo LLC)")
     meta(name="viewport",content="width=device-width, initial-scale=1.0")
 
-    link(rel="shortcut icon", sizes="256x256", href="/images/icon_256x256.png")
-    link(rel="apple-touch-icon", sizes="152x152", href="/images/icon_76x76@2x.png")
-    link(rel="apple-touch-icon", sizes="120x120", href="/images/icon_60x60@2x.png")
-    link(rel="apple-touch-icon", sizes="76x76", href="/images/icon_76x76.png")
-    link(rel="apple-touch-icon", href="/images/icon_57x57.png")
+    link(rel="shortcut icon", sizes="256x256", href="#{basePath}/images/icon_256x256.png")
+    link(rel="apple-touch-icon", sizes="152x152", href="#{basePath}/images/icon_76x76@2x.png")
+    link(rel="apple-touch-icon", sizes="120x120", href="#{basePath}/images/icon_60x60@2x.png")
+    link(rel="apple-touch-icon", sizes="76x76", href="#{basePath}/images/icon_76x76.png")
+    link(rel="apple-touch-icon", href="#{basePath}/images/icon_57x57.png")
 
     block style
 
