--- a/app/views/surveys/component/_form-footer.jade
+++ b/app/views/surveys/component/_form-footer.jade
@@ -1,10 +1,11 @@
 section.form-footer
   .form-footer__content
     .form-footer__content__main-controls
-      fieldset.draft.question.simple-select.hide
-        .option-wrapper: label.select 
-          input.ignore(type="checkbox", name="draft")
-          span.option-label= t('formfooter.savedraft.label')
+      if draftEnabled
+        fieldset.draft.question.simple-select.hide
+          .option-wrapper: label.select 
+            input.ignore(type='checkbox', name='draft')
+            span.option-label= t('formfooter.savedraft.label')
       if type === 'preview'
         button#validate-form.btn.btn-primary.hide
           i.icon.icon-check= ' '+ t('formfooter.validate.btn')
