--- a/app/views/surveys/component/_form-footer.jade
+++ b/app/views/surveys/component/_form-footer.jade
@@ -8,10 +8,12 @@ section.form-footer
             span.option-label= t('formfooter.savedraft.label')
       if type === 'preview'
         button#validate-form.btn.btn-primary.hide
-          i.icon.icon-check= ' '+ t('formfooter.validate.btn')
+          i.icon.icon-check= ' '
+          | #{t('formfooter.validate.btn')}
       else
         button#submit-form.btn.btn-primary.hide
-          i.icon.icon-check= ' '+ t('formfooter.submit.btn')
+          i.icon.icon-check= ' '
+          | #{t('formfooter.submit.btn')}
       a.btn.btn-primary.next-page(href="#")= t('form.pages.next')
       include _logout
       include _enketo-power
