--- a/app/views/styles/theme-oc/theme-oc.scss
+++ b/app/views/styles/theme-oc/theme-oc.scss
@@ -33,7 +33,7 @@
 @import "../../../../node_modules/enketo-core/src/sass/core/pages";
 
 // components
-//@import "component/side-slider";
+@import "../component/side-slider";
 @import "../theme-formhub/form_formhub";
 @import "../component/form_header";
 @import "../component/form_footer";
