added: discrepancy notes widget, closes https://github.com/kobotoolbox/enketo-express/issues/295

--- a/app/views/styles/component/_widgets.scss
+++ b/app/views/styles/component/_widgets.scss
@@ -1,2 +1,3 @@
 // no customizations, just the default enketo-core
 @import "../../../../node_modules/enketo-core/src/sass/core/_widgets.scss";
+@import "../../../../public/widget/discrepancy-note/dn-widget.scss";
