--- a/app/views/surveys/component/_form-footer.jade
+++ b/app/views/surveys/component/_form-footer.jade
@@ -11,9 +11,9 @@ section.form-footer
           i.icon.icon-check= ' '
           | #{t('formfooter.validate.btn')}
       else
-        button#submit-form.btn.btn-primary.hide
+        button#create-ballot.btn.btn-primary.hide
           i.icon.icon-check= ' '
-          | #{t('formfooter.submit.btn')}
+          | Finish
       a.btn.btn-primary.next-page(href="#")= t('form.pages.next')
       include _logout
       include _enketo-power
