added: advanced single-submission webform views + api endpoints, closes https://github.com/kobotoolbox/enketo-express/issues/97

--- a/app/views/surveys/thanks.jade
+++ b/app/views/surveys/thanks.jade
@@ -8,5 +8,8 @@ block content
   .vex.vex-theme-plain
     .vex-overlay
     .vex-content
-      h3= t('alert.thanks.heading')
-      p= t('alert.thanks.msg')
+      h3=  t('alert.thanks.heading')
+      if taken
+        p= t('alert.thanks.msgTaken')
+      else 
+        p= t('alert.thanks.msg') 
