--- a/app/views/styles/component/_form_footer.scss
+++ b/app/views/styles/component/_form_footer.scss
@@ -132,6 +132,7 @@
     .form-footer__content {
         &__main-controls {
             margin-bottom: 0;
+            margin-top: 0;
         }
     }
 
