--- a/public/widget/discrepancy-note/dn-widget.scss
+++ b/public/widget/discrepancy-note/dn-widget.scss
@@ -1,47 +1,66 @@
 $padding: 30px;
 
 .or-comment-widget {
-    &__content{
+    &__content {
         @include display-flex;
+
         @include flex-direction(row);
+
         @include flex-wrap(wrap);
+
         .question {
             width: 100%;
+            flex: 100%;
         }
+
         &__query-btns {
             @include display-flex;
+
             @include flex-direction(row);
+
             @include flex-wrap(nowrap);
+
             @include flex(1);
+
             white-space: nowrap;
             justify-content: flex-end;
+
             .btn + .btn {
                 margin-left: 20px;
             }
         }
+
         &__btn-submit {
             @extend .small;
+
             margin-bottom: 0;
             margin-top: 10px;
+
             &.btn-default {
                 // override .question .btn-default
                 padding: 10px 20px;
             }
-            
         }
+
         &__user {
             @include display-flex;
+
             @include flex-direction(row);
+
             @include flex-wrap(wrap);
+
             &__dn-assignee {
                 @include flex(1);
+
                 display: inline-block;
+
                 select {
                     display: inline-block;
                     margin-left: 10px;
                     width: 200px;
                 }
             }
+
             &__dn-notify {
                 width: 120px;
                 text-align: right;
@@ -51,47 +70,61 @@ $padding: 30px;
                 margin-left: -10px;
             }
         }
-        &__history{
+
+        &__history {
             margin-bottom: -50px;
+
             &.closed {
                 .btn-more-history .icon {
                     @extend .icon-chevron-down;
                 }
-                tr + tr + tr + tr:not(:last-of-type){
-                    display:none;
+
+                tr + tr + tr + tr:not(:last-of-type) {
+                    display: none;
                 }
+
                 .over {
                     display: inline;
                 }
             }
-            .over { 
+
+            .over {
                 display: none;
             }
+
             .btn-more-history {
                 margin-top: 10px;
+
                 .icon {
                     @extend .icon-chevron-up;
                 }
             }
+
             table {
                 @include font-normal;
+
                 width: 100%;
                 border-collapse: collapse;
                 table-layout: fixed;
             }
+
             thead td {
                 padding-left: 25px;
-                width: 95px; 
-                &:first-of-type{
+                width: 95px;
+
+                &:first-of-type {
                     width: 30px;
                 }
-                &:nth-of-type(2){
+
+                &:nth-of-type(2) {
                     width: auto;
                 }
-                &:nth-of-type(3){
+
+                &:nth-of-type(3) {
                     width: 140px;
                 }
             }
+
             td {
                 padding: 3px 10px 3px 0;
                 border-bottom: 1px solid $gray;
@@ -99,22 +132,27 @@ $padding: 30px;
                 overflow: hidden;
                 text-overflow: ellipsis;
                 word-break: break-word;
-                &.wrap{
+
+                &.wrap {
                     white-space: normal;
                     overflow: auto;
                     text-overflow: initial;
                 }
             }
+
             tbody tr:last-of-type td {
                 border-bottom: none;
             }
-            tbody td[colspan="4"]{
+
+            tbody td[colspan="4"] {
                 text-align: right;
             }
         }
+
         .or-appearance-dn {
             margin-bottom: 20px;
         }
+
         .btn-dn {
             position: absolute;
             top: 27px;
@@ -122,8 +160,10 @@ $padding: 30px;
             left: auto;
             outline: 0;
         }
+
         .tooltip[data-title]:hover:after {
             @include font-normal;
+
             content: attr(data-title);
             padding: 2px 8px;
             color: $state-info-text;
@@ -147,42 +187,53 @@ legend .btn-dn .icon {
 
 .btn-comment.btn-dn {
     cursor: pointer;
+
     .icon {
         opacity: 0.9;
+
         // this is the "none" state
         @extend .fa-comment-o;
     }
+
     &.new, &.updated {
         color: $state-dangerest-text;
+
         .icon {
             opacity: 0.5;
+
             @extend .fa-comment;
         }
     }
+
     &.invalid {
         @include transition-fast;
+
         color: $state-dangerest-text;
+
         .icon {
             font-weight: bold;
         }
     }
+
     &.closed {
         .icon {
             opacity: 1;
-            @extend .fa-comment;      
+
+            @extend .fa-comment;
         }
     }
 }
 
 // small screens
-@media screen and (max-width: 500px) { 
+@media screen and (max-width: 500px) {
     .or-comment-widget {
-        &__content{
-            &__history{   
+        &__content {
+            &__history {
                 thead td {
                     padding-left: 15px;
-                    width: 70px; 
-                    &:nth-of-type(3){
+                    width: 70px;
+
+                    &:nth-of-type(3) {
                         width: 80px;
                     }
                 }
@@ -196,6 +247,7 @@ legend .btn-dn .icon {
     .btn-dn {
         left: 55px;
     }
+
     .or-comment-widget {
         &__content {
             &__query-btns {
@@ -204,14 +256,17 @@ legend .btn-dn .icon {
                     margin-right: 20px;
                 }
             }
-            &__history{
-                tbody td[colspan="4"]{
+
+            &__history {
+                tbody td[colspan="4"] {
                     text-align: left;
                 }
             }
+
             &__user {
                 &__dn-notify {
                     text-align: left;
+
                     .option-label {
                         margin-right: 0;
                     }
