changed: stop using a separate font-family for bold font-weight, https://github.com/kobotoolbox/enketo-express/issues/621

--- a/app/views/styles/component/_fonts.scss
+++ b/app/views/styles/component/_fonts.scss
@@ -1,20 +1,18 @@
 @import "../../../lib/font-awesome/scss/font-awesome";
 
 @font-face {
-    font-family: 'OpenSansRegular';
+    font-family: 'OpenSans';
     src: url($base-path + "/fonts/OpenSans-Regular-webfont.woff") format("woff");
     font-weight: normal;
     font-style: normal;
 }
 
-
 @font-face {
-    font-family: 'OpenSansBold';
+    font-family: 'OpenSans';
     src: url($base-path + "/fonts/OpenSans-Bold-webfont.woff") format("woff");
-    font-weight: normal;
+    font-weight: bold;
     font-style: normal;
 }
-
 
 @font-face {
     font-family: 'enketo-icons';
