--- a/app/views/styles/component/_modal.scss
+++ b/app/views/styles/component/_modal.scss
@@ -61,8 +61,7 @@
     }
 
     legend {
-        @include font-bold;
-
+        font-weight: bold;
         font-size: 16px;
         margin-bottom: 10px;
 
