--- a/app/views/styles/component/_buttons.scss
+++ b/app/views/styles/component/_buttons.scss
@@ -1,4 +1,4 @@
-$body-font-family: "OpenSansRegular" !default;
+$body-font-family: "OpenSans" !default;
 $oil: #333333 !default;
 $secondary-color: white !default;
 $global-radius: 3px !default;
@@ -79,6 +79,7 @@ $button-disabled-cursor: $cursor-default-value !default;
         -webkit-appearance: none;
         -webkit-border-radius: 0;
     }
+
     @if $display {
         display: $display;
     }
@@ -90,6 +91,7 @@ $button-disabled-cursor: $cursor-default-value !default;
         padding-#{$opposite-direction}: $padding * 2;
         padding-bottom: $padding;
         padding-#{$default-float}: $padding * 2;
+
         @if $padding == $button-med {
             font-size: $button-font-med;
         }
@@ -97,6 +99,7 @@ $button-disabled-cursor: $cursor-default-value !default;
             font-size: $button-font-sml;
         }
     }
+
     @if $full-width {
         @if $padding {
             padding-top: $padding;
@@ -106,6 +109,7 @@ $button-disabled-cursor: $cursor-default-value !default;
             padding-top: 0;
             padding-bottom: 0;
         }
+
         padding-right: 0;
         padding-left: 0;
         width: 100%;
@@ -116,37 +120,47 @@ $button-disabled-cursor: $cursor-default-value !default;
     @if $bg-hover == null {
         $bg-hover: if($bg == $button-bg-color, $button-bg-hover, scale-color($bg, $lightness: $button-function-factor));
     }
+
     @if $border-color == null {
         $border-color: if($bg == $button-bg-color, $button-border-color, scale-color($bg, $lightness: $button-function-factor));
     }
+
     // This find the lightness percentage of the background color.
     $bg-lightness: lightness($bg);
     $bg-hover-lightness: lightness($bg-hover);
+
     background-color: $bg;
     border-color: $border-color;
+
     &:hover,
     &:focus {
         background-color: $bg-hover;
     }
+
     // We control the text color for you based on the background color.
     color: if($bg-lightness > 70%, $button-font-color-alt, $button-font-color);
+
     &:hover,
     &:focus {
         color: if($bg-hover-lightness > 70%, $button-font-color-alt, $button-font-color);
     }
+
     &:focus, &:link, &:active, &:visited {
         text-decoration: none;
     }
+
     // We can set $disabled:true to create a disabled transparent button.
     @if $disabled {
         cursor: $button-disabled-cursor;
         opacity: $button-disabled-opacity;
         box-shadow: none;
+
         &:hover,
         &:focus {
             background-color: $bg;
         }
     }
+
     // We can control how much button radius is used.
     @if $radius == true {
         @include radius($button-radius);
@@ -163,21 +177,29 @@ button {
 
 .btn {
     @include button-base;
+
     @include button-size;
+
     @include button-style;
+
     @include single-transition(background-color);
+
     &.btn-default {
         @include button-style($bg: $secondary-color, $bg_hover: $secondary-button-bg-hover, $border_color: $secondary-button-border-color);
     }
+
     &.small {
         @include button-size($padding: $button-sml);
     }
+
     &.disabled, &[disabled] {
         @include button-style($bg: $button-bg-color, $disabled: true, $bg_hover: $button-bg-hover, $border_color: $button-border-color);
+
         &.btn-default {
             @include button-style($bg: $secondary-color, $disabled: true, $bg_hover: $secondary-button-bg-hover, $border_color: $secondary-button-border-color);
         }
     }
+
     .icon {
         margin-right: 6px;
     }
@@ -192,6 +214,7 @@ button::-moz-focus-inner {
 @media #{$medium-up} {
     button, .button {
         @include button-base($style: false, $display: inline-block);
+
         @include button-size($padding: false, $full_width: false);
     }
 }
@@ -203,12 +226,17 @@ button::-moz-focus-inner {
     color: $text-color;
     background: none;
     border: none;
+
     @include box-shadow-none;
+
     opacity: 0.7;
+
     &:hover, &:focus, &:active, &.active, &:disabled, &.disabled {
         background: none;
+
         @include box-shadow-none;
     }
+
     &:hover {
         color: $text-color;
         opacity: 0.5;
