changed: upgraded from jade to pug, closes https://github.com/kobotoolbox/enketo-express/issues/630

--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -7,9 +7,9 @@ html(manifest=manifest, lang=language, dir=dir(language))
     meta(name="author", content="Martijn van de Rijdt (Enketo LLC)")
     meta(name="viewport",content="width=device-width, initial-scale=1.0")
 
-    link(rel="shortcut icon", href="#{basePath}/images/favicon.ico")
-    link(rel="icon", type="image/png", sizes="180x180", href="#{basePath}/images/icon_180x180.png")
-    link(rel="apple-touch-icon", sizes="180x180", href="#{basePath}/images/icon_180x180.png")
+    link(rel="shortcut icon", href=`${basePath}/images/favicon.ico`)
+    link(rel="icon", type="image/png", sizes="180x180", href=`${basePath}/images/icon_180x180.png`)
+    link(rel="apple-touch-icon", sizes="180x180", href=`${basePath}/images/icon_180x180.png`)
 
     block style
 
