--- a/app/views/surveys/component/_form-header.pug
+++ b/app/views/surveys/component/_form-header.pug
@@ -5,9 +5,9 @@ header.form-header
       .offline-enabled__queue-length(title="Records Queued")
   .form-progress
   if (logo.source)
-    a.form-header__branding(href="#{logo.href || '#'}")
+    a.form-header__branding(href=`${logo.href || '#'}`)
       .logo-wrapper
-        img(src="#{logo.source}", alt="brand logo")
+        img(src=`${logo.source}`, alt="brand logo")
   .form-header__filler
   button.form-header__button--print.btn-icon-only(onclick="return false;").hide
   span.form-language-selector.hide: span= t('form.chooseLanguage')
