--- a/app/views/surveys/component/_side-slider.pug
+++ b/app/views/surveys/component/_side-slider.pug
@@ -7,7 +7,7 @@ aside.record-list.side-slider
 	.record-list__button-bar
 		button.record-list__button-bar__button.upload.btn.btn-primary(type="button", disabled)= t('record-list.upload') 
 		button.record-list__button-bar__button.export.btn.btn-default(type="button", disabled)= t('record-list.export')
-	- var uploadGuidance = (draftEnabled) ? t('record-list.msg2', {icon: '<span class="icon icon-pencil"> </span>'}) : t('record-list.msg2-nodraft')
+	- var uploadGuidance = (draftEnabled) ? t('record-list.msg2', {icon: '<span class="icon icon-pencil"> </span>', interpolation: {escapeValue: false}}) : t('record-list.msg2-nodraft')
 		p!= uploadGuidance + ' ' + t('record-list.msg3')
 	p.side-slider__app-version= t('version') + ' '
 		span.side-slider__app-version__value
